wrapping fixes and still to go till MVP

--- a/src/_component/layout/layout.scss
+++ b/src/_component/layout/layout.scss
@@ -1,12 +1,5 @@
-* {
-  box-sizing: border-box;
-}
-
-html, body {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  height: 100%;
-}
-
-html {
-  font-size: calc(12px + (24 -12)*((100vmin -400px)/(800 -400)));
-}
+// html,
+// body {
+//   margin: 0;
+//   overflow: hidden;
+// }
